--- a/app/impero/src/Impero/Impero/View/intro.twig
+++ b/app/impero/src/Impero/Impero/View/intro.twig
@@ -131,4 +131,9 @@
         <p>We wrote secure web API so you can extend and automate your infrastructure needs.</p>
         <a href="#" class="pull-right">Learn more</a>
     </div>
+    <div class="col-md-4 col-sm-6">
+        <h4>Log parser</h4>
+        <p>Read apache, mysql, system and other logs in human readable format.</p>
+        <a href="#" class="pull-right">Learn more</a>
+    </div>
 </div>
