--- a/app/impero/src/Impero/Servers/View/servers/install.sh.twig
+++ b/app/impero/src/Impero/Servers/View/servers/install.sh.twig
@@ -19,7 +19,7 @@ echo 'impero ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers.d/100-impero
 
 echo 'Notifying supervisor about new server, this can take a moment ...'
 IMPEROHOSTNAME=$(cat /etc/hostname)
-POSTPARAMS='hostname='$IMPEROHOSTNAME'password={{ secret }}'
+POSTPARAMS='hostname='$IMPEROHOSTNAME'&password={{ secret }}'
 curl -v --data "$POSTPARAMS" "http://impero.foobar.si/postinstall/{{ userhash }}"
 
 echo "Connection successfully estamblished. You can check status in impero panel: http://impero.foobar.si"
