--- a/app/impero/src/Impero/Servers/View/servers/install.sh.twig
+++ b/app/impero/src/Impero/Servers/View/servers/install.sh.twig
@@ -20,6 +20,6 @@ echo 'impero ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers.d/100-impero
 echo 'Notifying supervisor about new server, this can take a moment ...'
 IMPEROHOSTNAME=$(cat /etc/hostname)
 POSTPARAMS='hostname='$IMPEROHOSTNAME'&password={{ secret }}&port=22'
-curl -v --data "$POSTPARAMS" "http://impero.foobar.si/postinstall/{{ userhash }}"
+curl -v --data "$POSTPARAMS" "http://impero.foobar.si/postinstall"
 
 echo "Connection successfully estamblished. You can check status in impero panel: http://impero.foobar.si"
